Enhance workflow descriptions and fix tarball creation paths in CI and publish workflows

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -1,3 +1,4 @@
+# description: Runs on Pull Requests. It detects which folders changed and conditionally runs tests only for the modified services. 
 name: CI (Pull Request)
 
 on: [pull_request]
