--- a/.github/workflows/publish-api.yml
+++ b/.github/workflows/publish-api.yml
@@ -1,3 +1,4 @@
+# description: Triggers on changes to the api/ folder. It reads the version from a file, packages the Python source code into a tarball (fixing the directory path error), and creates a GitHub release.
 name: Publish API Artifact
 
 on:
@@ -14,7 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # FIX: Correct path is api/VERSION, not api/src/VERSION.txt
       - name: Read Version
         id: version
         run: echo "VERSION=$(cat api/VERSION)" >> $GITHUB_ENV
@@ -25,7 +25,7 @@ jobs:
           # Copy source code to dist
           cp -r api/src/* dist/
           # Create artifact
-          tar -czf api-release.tar.gz -C dist.
+          tar -czf api-release.tar.gz -C dist .
 
       - name: Create GitHub Pre-release
         uses: softprops/action-gh-release@v2
@@ -34,11 +34,3 @@ jobs:
           name: "API Service v${{ env.VERSION }}"
           files: api-release.tar.gz
           prerelease: true
-
-      # - name: Trigger Ecosystem QA
-      #   uses: peter-evans/repository-dispatch@v3
-      #   with:
-      #     token: ${{ secrets.PAT_FOR_DISPATCH }}
-      #     repository: nova-ecosystem/ecosystem-qa
-      #     event-type: qa-run
-      #     client-payload: '{"tag": "api-v${{ env.VERSION }}", "repo": "ecosystem-core", "test_suite": "intra-core"}'
