--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,9 @@
         8000,
         9000
     ],
+    "remoteEnv": {
+        "PATH": "${containerEnv:PATH}:/home/appuser/.local/bin"
+    },
     // Install App requirements AND the Nova CLI from the devtools repo
     "postCreateCommand": "cd /workspace/app && pip install -r requirements.txt && pip install 'git+https://github.com/nova-ecosystem/ecosystem-devtools.git@main#subdirectory=nova-cli'"
 }
