--- a/website/package.json
+++ b/website/package.json
@@ -23,6 +23,10 @@
         "react": "^18.0.0",
         "react-dom": "^18.0.0"
     },
+    "devDependencies": {
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0"
+    },
     "browserslist": {
         "production": [
             ">0.5%",
