feat: Launch NovaEco Documentation and Blog
- Introduced new welcome blog post for NovaEco.
- Updated API examples to reflect new domain (novaeco.tech).
- Revised API overview and core services documentation to use NovaEco terminology.
- Enhanced architecture overview with detailed service descriptions and interaction flows.
- Updated changelog to reflect NovaEco branding.
- Adjusted developer documentation for CLI installation and contribution guidelines.
- Revised quickstart and setup guides to align with NovaEco.
- Updated CI/CD workflows to reflect NovaEco branding.
- Revised FAQ and glossary to use NovaEco terminology.
- Enhanced developer guides for consistency with NovaEco branding.
- Updated use case documentation to reflect new service names and interactions.
- Changed Docusaurus configuration and homepage to reflect NovaEco branding.
- Updated package dependencies for Docusaurus.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Nova Ecosystem Core",
+    "name": "NovaEco Core",
     "dockerComposeFile": "docker-compose.yml",
     // This is the service VS Code will 'attach' to.
     // The other services (api, auth) will still be running.
@@ -26,5 +26,5 @@
         "PATH": "${containerEnv:PATH}:/home/appuser/.local/bin"
     },
     // Install App requirements AND the Nova CLI from the devtools repo
-    "postCreateCommand": "cd /workspace/app && pip install -r requirements.txt && pip install 'git+https://github.com/nova-ecosystem/ecosystem-devtools.git@main#subdirectory=nova-cli'"
+    "postCreateCommand": "cd /workspace/app && pip install -r requirements.txt && pip install 'git+https://github.com/novaeco-tech/ecosystem-devtools.git@main#subdirectory=nova-cli'"
 }
