fix: Update references from Nova to NovaEco across various files and documentation

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,6 +25,6 @@
     "remoteEnv": {
         "PATH": "${containerEnv:PATH}:/home/appuser/.local/bin"
     },
-    // Install App requirements AND the Nova CLI from the devtools repo
-    "postCreateCommand": "cd /workspace/app && pip install -r requirements.txt && pip install 'git+https://github.com/novaeco-tech/ecosystem-devtools.git@main#subdirectory=nova-cli'"
+    // Install App requirements AND the NovaEco CLI from the devtools repo
+    "postCreateCommand": "cd /workspace/app && pip install -r requirements.txt && pip install 'git+https://github.com/novaeco-tech/ecosystem-devtools.git@main#subdirectory=novaeco-cli'"
 }
