--- a/.github/workflows/publish-auth.yml
+++ b/.github/workflows/publish-auth.yml
@@ -80,11 +80,10 @@ jobs:
         with:
           token: ${{ steps.generate_qa_token.outputs.token }}
           repository: novaeco-tech/ecosystem-qa
-          event-type: qa-run
+          event-type: qa-trigger
           client-payload: >-
             {
-              "repo": "ecosystem-core", 
-              "service": "auth",
-              "tag": "${{ env.TAG_NAME }}", 
-              "artifact_name": "ecosystem-core-auth.tar.gz"
+              "component": "ecosystem-core-auth",
+              "version": "${{ env.TAG_NAME }}",
+              "category": "core"
             }
